# qfnu-empty-classrooms

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  database.py  debug.bat  deploy.ps1  deploy.sh  go.mod  go.sum  logger.py  main.go  package-lock.json  package.json  pyproject.toml  services.py  start.sh
admin/: __init__.py  decorators.py  routes.py
auth/: __init__.py  routes.py
cmd/demo/: main.go
docs/: UI_DESIGN_DOC.md  code-tutorial.md  get-classroom-staus.md  get-week.md  qfnu-cas-login-api.md  ui.md  前端Vue3重构方案.md
internal/api/v1/: handler.go
internal/model/: types.go
internal/service/: calendar.go  classroom.go
pkg/auth/: crypto.go
pkg/cas/: client.go  login.go
pkg/logger/: handler.go  logger.go
templates/: desktop.html  mobile.html
templates/admin/: dashboard.html  login.html
templates/auth/: verify.html
web/: assets.go  full-day-status.html  index.html
web/css/: input.css
