[project]
name = "qfnu-empty-classrooms"
version = "1.0.0"
description = "曲阜师范大学空教室查询系统 - Flask Web 服务"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "ddddocr>=1.4.0",
    "user-agents>=2.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["app.py", "services.py", "templates"]

[tool.hatch.build.targets.sdist]
only-include = ["app.py", "services.py", "templates", "pyproject.toml", "README.md", ".env.example"]
